Updated stylesheets to a more functional state; fixed a few spacing issues

--- a/res/styles/styles.scss
+++ b/res/styles/styles.scss
@@ -83,49 +83,60 @@ select {
 .horz-container  {	
 	width: 100vw;
 	height: 70vh;
-	margin: 0 1%;
+	margin: 0 1em;
 	
 	.content-panel {
 		vertical-align: top;
 		display: inline-block;
 		*display: inline;
+		margin: 0 1em;
 	}
 	
 	.reactor-commands {
 		width: 15%;
+		margin-left: 0;
 		.button-stack {
 			display: flex; 
 			flex-direction: column;
 		}
 	}	
 	.reactor-console {
-		width: 30%;
+		width: 28%;
 		height: inherit;
 		text-align: center;
 		margin-left: auto;
 		margin-right: auto;	
-		
+
+
+		span {
+			font-family: monospace;
+			color: whitesmoke;
+		}
+
+		.status-bar {
+			width: 100%;
+			height: 5%;
+			background-color: black;
+			margin-bottom: 0px;
+			border-bottom: 1px solid grey;
+			
+		}
+
 		.console {
 			width: 100%;
+			height: 85%;
 			color: whitesmoke;
 			background-color: black;
 			text-align: left;
-			
-			span {
-				font-family: monospace;
-			}
-		}
-		.status-bar {
-		}
-
-		.output {	
-			height: 80%;
+			margin-top: 0px;
+			border-radius: 0px;
 		}
 	}
 	
 	.reactor-dataplots {
-		width: 49%;
+		width: 50%;
 		height: inherit;
+		margin-left: 2em;
 
 		#dataplot-selectors select option#selected {
 			/* font-weight: bolder; */
